# DiningPhilosophers

./: CMakeLists.txt  Makefile  README.md
includes/: Config.h  Philo.h  Simulation.h  Timer.h  config.h  philosophers.h  simulation.h  timer.h
src/: Config.cc  Philo.cc  Simulation.cc  Timer.cc  config.cc  main.cc  philosophers.cc  simulation.cc  timer.cc
